# DeviceClientExample

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
docs/: statemachine.drawio
include/: clientResponseProcessor.h  devicestate.h  httprestclient.h  messagehandling.h  my_lib.h  utils.h
src/: CMakeLists.txt  devicestate.cpp  httprestclient.cpp  messagehandling.cpp  my_lib.cpp  utils.cpp
tests/: test_mylib.cpp
